--- a/index.html
+++ b/index.html
@@ -4,5 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Valentine's Day, My Love!</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #ff9a9e, #fecfef, #fecfef);
+            color: #333;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .heart {
+            font-size: 100px;
+            color: #e74c3c;
+            animation: beat 1.5s infinite;
+            margin-bottom: 20px;
+        }
+        @keyframes beat {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+        }
+        .message {
+            font-size: 24px;
+            margin: 20px;
+            max-width: 600px;
+        }
+        .floating-heart {
+            position: absolute;
+            font-size: 20px;
+            color: #e74c3c;
+            animation: float 6s linear infinite;
+            opacity: 0.7;
+        }
+        @keyframes float {
+            0% { transform: translateY(100vh) rotate(0deg); }
+            100% { transform: translateY(-100vh) rotate(360deg); }
+        }
+        button {
+            background: #e74c3c;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            font-size: 18px;
+            border-radius: 25px;
+            cursor: pointer;
+            margin-top: 20px;
+            transition: background 0.3s;
+        }
+        button:hover {
+            background: #c0392b;
+        }
+    </style>
 </head>
+<body>
+    <div class="heart">❤️</div>
+    <div class="message">
+        <h1>Happy Valentine's Day, My Love!</h1>
+        <p>You are the light of my life, the beat in my heart, and the reason I smile every day. I love you more than words can say. Will you be my Valentine forever?</p>
+        <p>With all my heart,<br>Your [Charan Rowthu❤️]</p>
+    </div>
+    <button onclick="playAudio()">Play My Special Message 💕</button>
+
+    <audio id="loveAudio" src="C:\Users\HP\Downloads\Nijame Ne Chebutunna.mp3" preload="auto"></audio>
+
+    <script>
+        // Generate floating hearts
+        function createHeart() {
+            const heart = document.createElement('div');
+            heart.className = 'floating-heart';
+            heart.innerHTML = '❤️';
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.animationDelay = Math.random() * 6 + 's';
+            document.body.appendChild(heart);
+            setTimeout(() => heart.remove(), 6000);
+        }
+        setInterval(createHeart, 1000);
+
+        // Function to play audio
+        function playAudio() {
+            const audio = document.getElementById('loveAudio');
+            audio.play();
+        }
+    </script>
+</body>
 </html>
