--- a/newcode.html
+++ b/newcode.html
@@ -66,11 +66,11 @@
     <div class="message">
         <h1>Happy Valentine's Day, My Love!</h1>
         <p>You are the light of my life, the beat in my heart, and the reason I smile every day. I love you more than words can say. Will you be my Valentine forever?</p>
-        <p>With all my heart,<br>Your [❤️]</p>
+        <p>With all my heart,<br>Your [Charan❤️]</p>
     </div>
     <button onclick="playAudio()">Play My Special Message 💕</button>
 
-    <audio id="loveAudio" src=".mp3" preload="auto"></audio>
+    <audio id="loveAudio" src="C:\Users\HP\Downloads\Nijame Ne Chebutunna.mp3" preload="auto"></audio>
 
     <script>
         // Generate floating hearts
@@ -94,3 +94,4 @@
 </body>
 
 </html>
+
