--- a/newcode.html
+++ b/newcode.html
@@ -70,7 +70,7 @@
     </div>
     <button onclick="playAudio()">Play My Special Message 💕</button>
 
-    <audio id="loveAudio" src="C:\Users\HP\Downloads\Nijame Ne Chebutunna.mp3" preload="auto"></audio>
+    <audio id="loveAudio" src="./Nijame Ne Chebutunna.mp3" preload="auto"></audio>
 
     <script>
         // Generate floating hearts
@@ -94,4 +94,5 @@
 </body>
 
 </html>
+
 
